finalize dashboard, align enum architecture, and harden model coverage